--- a/package.json
+++ b/package.json
@@ -30,7 +30,8 @@
     "knex": "^0.20.4",
     "knex-cleaner": "^1.3.0",
     "sqlite3": "^4.1.1",
-    "supertest": "^4.0.2"
+    "supertest": "^4.0.2",
+    "uuid": "^3.3.3"
   },
   "devDependencies": {
     "nodemon": "^2.0.2"
